fixes grid on mobile

--- a/beta/www/css/style.sass
+++ b/beta/www/css/style.sass
@@ -165,7 +165,7 @@ article:last-child:not(.articles > article)
             &:hover div
                 top: 0
 
-@media screen and (max-width: 460px)
+@media screen and (max-width: 360px)
     .grid-container, .extras, .grid
         width: 100%
         display: flex
